Running Findbugs for static analysis